--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT/Apache-2.0"
 http = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+mongodb = { version = "0.9", optional = true }
 
 [features]
 cookie = []
