--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,14 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 http = "0.2"
+futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 mongodb = { version = "0.9", optional = true }
+
+
+[dev-dependencies]
+tokio = { versio = "0.2", features = ["rt-core", "rt-util", "rt-threaded", "test-util"] }
 
 [features]
 cookie = []
