--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 cookie = "0.13"
 mongodb = { version = "0.9", optional = true }
-tokio = { version = "0.2", default-features = false,  features = ["fs"] }
+tokio = { version = "0.2", default-features = false,  features = ["fs"], optional = true }
 
 [dev-dependencies]
 futures = "0.3"
