--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = "1.0"
 cookie = "0.13"
 mongodb = { version = "0.9", optional = true }
 tokio = { version = "0.2", default-features = false,  features = ["fs"], optional = true }
+async-std = { version = "1.5", optional = true }
 
 [dev-dependencies]
 futures = "0.3"
@@ -21,12 +22,16 @@ tokio = { version = "0.2", features = ["rt-core", "rt-util", "rt-threaded", "tes
 [features]
 redis = []
 memory = []
-filesystem = ["tokio/fs"]
+filesystem = []
 
 [[test]]
 name = "memory"
 required-features = ["memory"]
 
 [[test]]
-name = "filesystem"
-required-features = ["filesystem"]
+name = "filesystem-tokio"
+required-features = ["filesystem", "tokio"]
+
+[[test]]
+name = "filesystem-async-std"
+required-features = ["filesystem", "async-std"]
