--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ http = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 cookie = "0.13"
-mongodb = { version = "0.9", optional = true }
 tokio = { version = "0.2", default-features = false,  features = ["fs"], optional = true }
 async-std = { version = "1.5", optional = true }
+# redis = { version = "0.15", optional = true }
+# mongodb = { version = "0.9", optional = true }
 
 [dev-dependencies]
 futures = "0.3"
