--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT/Apache-2.0"
 http = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-cookie = "0.13"
+cookie = { version = "0.13", features = ["secure", "percent-encode"] }
 tokio = { version = "0.2", default-features = false,  features = ["fs"], optional = true }
 async-std = { version = "1.5", optional = true }
 # redis = { version = "0.15", optional = true }
