--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,46 +1,63 @@
 [package]
 name = "sessions"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["Fangdun Cai <cfddream@gmail.com>"]
 edition = "2018"
 description = "Sessions"
 documentation = "https://docs.rs/sessions"
+readme = "README.md"
 license = "MIT/Apache-2.0"
 
 [dependencies]
-http = "0.2"
+async-trait = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 cookie = { version = "0.13", features = ["secure", "percent-encode"] }
-tokio = { version = "0.2", default-features = false,  features = ["fs"], optional = true }
+nanoid = { version = "0.3", optional = true }
+tokio = { version = "0.2", default-features = false,  features = ["fs", "sync"], optional = true }
 async-std = { version = "1.5", optional = true }
-# redis = { version = "0.15", optional = true }
+redis = { git = "https://github.com/mitsuhiko/redis-rs.git", default-features = false, features = ["tokio-comp", "async-std-comp"], optional = true }
 # mongodb = { version = "0.9", optional = true }
 
 [dev-dependencies]
+http = "0.2"
 futures = "0.3"
 tokio = { version = "0.2", features = ["rt-core", "rt-util", "rt-threaded", "test-util", "macros"] }
 hyper = "0.13"
-nanoid = "0.3"
 bytes = "0.5"
+warp = "0.2"
+pretty_env_logger = "0.4"
+time = "0.2"
 
 [features]
-# redis = []
-memory = []
-filesystem = []
+default = ["nanoid"]
+# default = ["tokio"]
+redis-store = []
+redis-store-tokio = ["redis-store", "redis/tokio-comp"]
+redis-store-async-std = ["redis-store", "redis/async-std-comp"]
+memory-store = []
+fs-store = []
 
 [[test]]
 name = "memory"
-required-features = ["memory"]
+required-features = ["memory-store"]
 
 [[test]]
 name = "memory-hyper"
-required-features = ["memory", "tokio"]
+required-features = ["memory-store", "tokio"]
 
 [[test]]
-name = "filesystem-tokio"
-required-features = ["filesystem", "tokio"]
+name = "memory-warp"
+required-features = ["memory-store", "tokio"]
 
 [[test]]
-name = "filesystem-async-std"
-required-features = ["filesystem", "async-std"]
+name = "fs-tokio"
+required-features = ["fs-store", "tokio"]
+
+[[test]]
+name = "fs-async-std"
+required-features = ["fs-store", "async-std"]
+
+[[test]]
+name = "redis-warp"
+required-features = ["redis-store-tokio", "tokio"]
