--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -13,6 +13,11 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [stable]
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379/tcp
 
     steps:
       - uses: actions/checkout@master
