--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "sessions"
 version = "0.0.1"
 authors = ["Fangdun Cai <cfddream@gmail.com>"]
 edition = "2018"
-description = "Sessions"
+repository = "https://github.com/trek-rs/sessions"
+description = "Sessions for web services"
 documentation = "https://docs.rs/sessions"
 readme = "README.md"
 license = "MIT/Apache-2.0"
