--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 authors = ["Fangdun Cai <cfddream@gmail.com>"]
 edition = "2018"
 repository = "https://github.com/trek-rs/sessions"
-description = "Sessions module for web services"
+description = "General sessions module for web services"
 documentation = "https://docs.rs/sessions"
 readme = "README.md"
 license = "MIT/Apache-2.0"
