--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -41,17 +41,11 @@ jobs:
           command: test
           args: --test memory --features 'memory-store tokio'
 
-      - name: memory-hyper
+      - name: memory-warp-hyper
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --test memory-hyper --features 'memory-store tokio'
-
-      - name: memory-warp
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --test memory-warp --features 'memory-store tokio'
+          args: --test memory-warp-hyper --features 'memory-store tokio'
 
       - name: fs-tokio
         uses: actions-rs/cargo@v1
