--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ cookie = { version = "0.13", features = ["secure", "percent-encode"], optional =
 nanoid = { version = "0.3", optional = true }
 tokio = { version = "0.2", default-features = false,  features = ["fs", "sync"], optional = true }
 async-std = { version = "1.5", optional = true }
-# redis = { git = "https://github.com/mitsuhiko/redis-rs.git", branch = 'master', version = "0.15.2-alpha.0", default-features = false, features = ["tokio-comp", "async-std-comp"], optional = true }
+redis = { git = "https://github.com/mitsuhiko/redis-rs.git", branch = 'master', version = "0.15.2-alpha.0", default-features = false, features = ["tokio-comp", "async-std-comp"], optional = true }
 # mongodb = { version = "0.9", optional = true }
 
 [dev-dependencies]
@@ -32,13 +32,12 @@ time = "0.2"
 log = "0.4"
 
 [features]
-default = ["nanoid"]
-# default = ["tokio"]
-# redis-store = []
-# redis-store-tokio = ["redis-store", "redis/tokio-comp"]
-# redis-store-async-std = ["redis-store", "redis/async-std-comp"]
+default = ["nanoid", "cookie", "tokio"]
 memory-store = []
 fs-store = []
+redis-store = ["redis"]
+redis-store-tokio = ["redis-store", "redis/tokio-comp"]
+redis-store-async-std = ["redis-store", "redis/async-std-comp"]
 
 [[test]]
 name = "memory"
@@ -46,7 +45,7 @@ required-features = ["memory-store"]
 
 [[test]]
 name = "memory-warp-hyper"
-required-features = ["memory-store", "tokio", "cookie"]
+required-features = ["memory-store"]
 
 [[test]]
 name = "fs-tokio"
@@ -54,8 +53,8 @@ required-features = ["fs-store", "tokio"]
 
 [[test]]
 name = "fs-async-std"
-required-features = ["fs-store", "async-std"]
+required-features = ["nanoid", "fs-store", "async-std"]
 
-# [[test]]
-# name = "redis-warp"
-# required-features = ["redis-store-tokio", "tokio"]
+[[test]]
+name = "redis-warp"
+required-features = ["redis-store-tokio", "tokio"]
