--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,10 @@ pretty_env_logger = "0.4"
 time = "0.2"
 log = "0.4"
 
+## tide
+tide = { git = "https://github.com/fundon/tide.git ", branch = "cookie-0.13" }
+surf = "1.0"
+
 [features]
 default = ["nanoid", "cookie", "tokio"]
 memory-store = []
@@ -58,3 +62,7 @@ required-features = ["nanoid", "fs-store", "async-std"]
 [[test]]
 name = "redis-warp"
 required-features = ["redis-store-tokio", "tokio"]
+
+[[test]]
+name = "redis-tide"
+required-features = ["nanoid", "redis-store-async-std", "async-std", "cookie"]
