--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,37 +11,38 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 async-trait = "0.1"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-cookie = { version = "0.13", features = ["secure", "percent-encode"], optional = true }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+cookie = { version = "0.14", features = ["secure", "percent-encode"], optional = true }
 nanoid = { version = "0.3", optional = true }
-tokio = { version = "0.2", default-features = false,  features = ["fs", "sync"], optional = true }
-async-std = { version = "1.5", optional = true }
-redis = { git = "https://github.com/mitsuhiko/redis-rs.git", branch = 'master', version = "0.15.2-alpha.0", default-features = false, features = ["tokio-comp", "async-std-comp"], optional = true }
+redis = { git = "https://github.com/mitsuhiko/redis-rs.git", branch = 'master', version = "0.16.1-alpha.0", default-features = false, features = ["tokio-comp", "async-std-comp"], optional = true }
+anyhow = "1"
+async-lock = "1.1"
+blocking = { version = "0.4", optional = true }
 # mongodb = { version = "0.9", optional = true }
 
 [dev-dependencies]
 http = "0.2"
 futures = "0.3"
 tokio = { version = "0.2", features = ["rt-core", "rt-util", "rt-threaded", "test-util", "macros"] }
+async-std = { version = "1.6", features = ["unstable", "attributes"] }
 hyper = "0.13"
 bytes = "0.5"
 warp = "0.2"
 pretty_env_logger = "0.4"
 time = "0.2"
 log = "0.4"
+tempfile = "3"
 
 ## tide
-tide = { git = "https://github.com/fundon/tide.git ", branch = "cookie-0.13" }
+tide = "0.12"
 surf = "1.0"
 
 [features]
-default = ["nanoid", "cookie", "tokio"]
+default = ["nanoid", "cookie"]
 memory-store = []
 fs-store = []
 redis-store = ["redis"]
-redis-store-tokio = ["redis-store", "redis/tokio-comp"]
-redis-store-async-std = ["redis-store", "redis/async-std-comp"]
 
 [[test]]
 name = "memory"
@@ -53,16 +54,16 @@ required-features = ["memory-store"]
 
 [[test]]
 name = "fs-tokio"
-required-features = ["fs-store", "tokio"]
+required-features = ["fs-store", "blocking"]
 
 [[test]]
 name = "fs-async-std"
-required-features = ["nanoid", "fs-store", "async-std"]
+required-features = ["fs-store", "blocking"]
 
 [[test]]
 name = "redis-warp"
-required-features = ["redis-store-tokio", "tokio"]
+required-features = ["redis-store"]
 
 [[test]]
 name = "redis-tide"
-required-features = ["nanoid", "redis-store-async-std", "async-std", "cookie"]
+required-features = ["redis-store", "cookie"]
