--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ blocking = { version = "0.4", optional = true }
 [dev-dependencies]
 http = "0.2"
 futures = "0.3"
+smol = "0.2"
 tokio = { version = "0.2", features = ["rt-core", "rt-util", "rt-threaded", "test-util", "macros"] }
 async-std = { version = "1.6", features = ["unstable", "attributes"] }
 hyper = "0.13"
