--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -13,6 +13,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [stable]
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
+        options: --entrypoint redis-server
 
     steps:
       - uses: actions/checkout@master
@@ -59,16 +65,16 @@ jobs:
           command: test
           args: --test fs-async-std --features 'fs-store blocking'
 
-      # - name: redis-warp
-      #   uses: actions-rs/cargo@v1
-      #   with:
-      #     command: test
-      #     args: --test redis-warp --features 'redis-store-tokio tokio'
-      # - name: redis-tide
-      #   uses: actions-rs/cargo@v1
-      #   with:
-      #     command: test
-      #     args: --test redis-tide --features 'redis-store-async-std async-std'
+      - name: redis-warp
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --test redis-warp --features 'redis-store'
+      - name: redis-tide
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --test redis-tide --features 'redis-store'
 
   check_fmt_and_docs:
     name: Checking fmt and docs
