--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -13,12 +13,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [stable]
-    services:
-      redis:
-        image: redis
-        ports:
-          - 6379:6379
-        options: --entrypoint redis-server
 
     steps:
       - uses: actions/checkout@master
@@ -65,6 +59,17 @@ jobs:
           command: test
           args: --test fs-async-std --features 'fs-store blocking'
 
+  build_and_test_redis:
+    name: Build and test redis
+    runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
+        options: --entrypoint redis-server
+
+    steps:
       - name: redis-warp
         uses: actions-rs/cargo@v1
         with:
