--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,15 @@ readme = "README.md"
 license = "MIT/Apache-2.0"
 
 [dependencies]
+anyhow = "1"
+async-lock = "1.1"
 async-trait = "0.1"
-serde = { version = "1", features = ["derive"] }
+serde = "1"
 serde_json = "1"
+blocking = { version = "0.4", optional = true }
 cookie = { version = "0.14", features = ["secure", "percent-encode"], optional = true }
 nanoid = { version = "0.3", optional = true }
 redis = { git = "https://github.com/mitsuhiko/redis-rs.git", branch = 'master', version = "0.16.1-alpha.0", default-features = false, features = ["tokio-comp", "async-std-comp"], optional = true }
-anyhow = "1"
-async-lock = "1.1"
-blocking = { version = "0.4", optional = true }
 # mongodb = { version = "0.9", optional = true }
 
 [dev-dependencies]
@@ -27,17 +27,17 @@ futures = "0.3"
 smol = "0.2"
 tokio = { version = "0.2", features = ["rt-core", "rt-util", "rt-threaded", "test-util", "macros"] }
 async-std = { version = "1.6", features = ["unstable", "attributes"] }
-hyper = "0.13"
-bytes = "0.5"
-warp = "0.2"
 pretty_env_logger = "0.4"
 time = "0.2"
 log = "0.4"
 tempfile = "3"
 
+## warp
+hyper = "0.13"
+warp = "0.2"
+
 ## tide
 tide = "0.12"
-surf = "1.0"
 
 [features]
 default = ["nanoid", "cookie"]
@@ -67,4 +67,4 @@ required-features = ["redis-store"]
 
 [[test]]
 name = "redis-tide"
-required-features = ["redis-store", "cookie"]
+required-features = ["redis-store"]
