--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,15 +16,15 @@ async-trait = "0.1"
 serde = "1"
 serde_json = "1"
 cookie = { version = "0.14", features = ["secure", "percent-encode"], optional = true }
-blocking = { version = "0.4", optional = true }
+blocking = { version = "0.5", optional = true }
 nanoid = { version = "0.3", optional = true }
-redis = { git = "https://github.com/mitsuhiko/redis-rs.git", branch = 'master', version = "0.16.1-alpha.0", default-features = false, features = ["tokio-comp", "async-std-comp"], optional = true }
+redis = { git = "https://github.com/mitsuhiko/redis-rs.git", branch = 'master', version = "0.17.1-alpha.0", default-features = false, features = ["tokio-comp", "async-std-comp"], optional = true }
 # mongodb = { version = "0.9", optional = true }
 
 [dev-dependencies]
 http = "0.2"
 futures = "0.3"
-smol = "0.2"
+smol = "0.3"
 tokio = { version = "0.2", features = ["rt-core", "rt-util", "rt-threaded", "test-util", "macros"] }
 async-std = { version = "1.6", features = ["unstable", "attributes"] }
 pretty_env_logger = "0.4"
@@ -37,7 +37,7 @@ hyper = "0.13"
 warp = "0.2"
 
 ## tide
-tide = "0.12"
+tide = { version = "0.13", default-features = false, features = ["h1-server", "logger"] }
 
 [features]
 default = ["nanoid", "cookie"]
