--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,14 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 anyhow = "1"
-async-lock = "1.1"
+async-rwlock = "1.1"
 async-trait = "0.1"
 serde = "1"
 serde_json = "1"
 cookie = { version = "0.14", features = ["secure", "percent-encode"], optional = true }
-blocking = { version = "0.5", optional = true }
+blocking = { version = "1.0", optional = true }
 nanoid = { version = "0.3", optional = true }
-redis = { git = "https://github.com/mitsuhiko/redis-rs.git", branch = 'master', version = "0.17.1-alpha.0", default-features = false, features = ["tokio-comp", "async-std-comp"], optional = true }
+redis = { version = "0.17", default-features = false, features = ["tokio-comp", "async-std-comp"], optional = true }
 # mongodb = { version = "0.9", optional = true }
 
 [dev-dependencies]
@@ -42,7 +42,7 @@ tide = { version = "0.13", default-features = false, features = ["h1-server", "l
 [features]
 default = ["nanoid", "cookie"]
 memory-store = []
-fs-store = []
+fs-store = ["blocking"]
 redis-store = ["redis"]
 
 [[test]]
@@ -55,11 +55,11 @@ required-features = ["memory-store"]
 
 [[test]]
 name = "fs-tokio"
-required-features = ["fs-store", "blocking"]
+required-features = ["fs-store"]
 
 [[test]]
 name = "fs-async-std"
-required-features = ["fs-store", "blocking"]
+required-features = ["fs-store"]
 
 [[test]]
 name = "redis-warp"
